fixed padding overflow with border box

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -13,4 +13,19 @@ body {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 3em;
+  width: 60vw;
 }
